maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: not found: value wl
    wl=getMondeLongueur();
    ^JediEscaper:4: error: not found: value wh
    wh=getMondeHauteur();
    ^JediEscaper:6: error: not found: value wl
    		for (i <- 1 to wl) {
                               ^